--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "babel-preset-react": "^6.24.1",
+    "core-js": "^2.6.12",
+    "firebase": "^7.24.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-flip-move": "^3.0.4",
     "react-scripts": "4.0.3",
+    "react-twitter-embed": "^3.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
